tests/syntax_errors/test3_2.tl
1
2241253
4534
1213
45876
0
012
03643271462147
00
127
01234567890000000
01232400002
01000000
